# dstamp

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: lint-and-test.yaml  publish-to-pypi.yaml
dstamp/: clipboard.py  config.py  format.py  main.py  parse.py  round.py
src/dstamp/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  console.py  discord.py  exceptions.py  format.py  logging.py  main.py  parse.py  round.py
src/dstamp/parse/: __init__.py  datetime.py  exceptions.py  offset.py  precision.py
src/dstamp/round/: __init__.py  precision.py  round.py
src/dstamp/subcommands/: __init__.py  get.py  show_config.py  show_log.py
tests/: conftest.py  patched_time.py  test_cli.py  test_config.py  test_discord.py  test_format.py  test_logging.py  test_main.py  test_parse.py  test_round.py  test_timestamp.py  typing.py
tests/dstamp_config/: copy.toml  invalid.toml  output_format_shorttime.toml  rounding.toml
tests/functional/: conftest.py  test_get.py  test_show_config.py
tests/parse/: test_date.py  test_offset.py  test_precision.py  test_time.py
tests/unit/: test_format.py  test_parse.py  test_round.py
tests/unit/parse/: test_datetime.py  test_offset.py  test_rounding_precision.py
tests/unit/round/: test_precision.py  test_time_to_precision.py
tests/utils/: config.py  dstamp_cli.py  parse.py  patched_time.py  test_timestamp.py  timestamp.py
