[project]
name = "dstamp"
version = "1.0.1"
description = "CLI app for generating timestamps for use in Discord chats."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Mariusz Tang", email = "dev@mariusztang.com" }]
keywords = ["discord", "generator", "timestamp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "cyclopts>=4.11.0",
  "platformdirs>=4.9.6",
  "pyperclip>=1.11.0",
]

[project.urls]
Issues = "https://github.com/mariusz-tang/dstamp/issues"
Repository = "https://github.com/mariusz-tang/dstamp"

[project.scripts]
dstamp = "dstamp.main:app.meta"

[dependency-groups]
dev = [
  "coverage>=7.13.5",
  "freezegun>=1.5.5",
  "pytest>=9.0.3",
  "ty>=0.0.34",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["src/"]
omit = ["src/dstamp/__main__.py", "src/dstamp/console.py"]

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.coverage.html]
skip_empty = true
skip_covered = true

[tool.pytest]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
per-file-ignores = { "tests/**" = ["ANN"] }
