[project]
name = "dstamp"
version = "2"
description = "CLI app for generating timestamps for use in Discord chats."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Mariusz Tang", email = "dev@mariusztang.com" }]
keywords = ["discord", "generator", "timestamp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "argcomplete>=3.6.3",
  "platformdirs>=4.10.0",
  "pyperclip>=1.11.0",
]

[project.urls]
Issues = "https://github.com/mariusz-tang/dstamp/issues"
Repository = "https://github.com/mariusz-tang/dstamp"

[project.scripts]
dstamp = "dstamp.cli:run"

[dependency-groups]
dev = [
  "coverage>=7.13.5",
  "freezegun>=1.5.5",
  "pytest>=9.0.3",
  "pytest-mock>=3.15.1",
  "ty>=0.0.34",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["src/"]

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.coverage.html]
skip_empty = true
skip_covered = true

[tool.pytest]
addopts = ["--import-mode=importlib"]
strict = true

[tool.ruff.lint]
select = [
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "D",  # pydocstyle
  "E",  # pycodestyle error
  "F",  # pyflakes
  "FURB",  # refurb
  "I",  # isort
  "N",  # pep8-naming
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
pydocstyle.convention = "pep257"
per-file-ignores = { "tests/**/*" = ["D"] }
